// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextualizedLocDetails renders 1`] = `
<LocPane
  loc={
    Object {
      "closed": false,
      "createdOn": "",
      "decisionOn": "",
      "description": "Description",
      "files": Array [],
      "id": UUID {
        "bytes": Array [
          147,
          99,
          195,
          214,
          209,
          7,
          66,
          26,
          164,
          75,
          133,
          199,
          250,
          176,
          184,
          67,
        ],
      },
      "links": Array [],
      "locType": "Identity",
      "metadata": Array [],
      "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
      "requesterLocId": undefined,
      "status": "OPEN",
    }
  }
>
  <LegalOfficerInstructions
    loc={
      Object {
        "closed": false,
        "createdOn": "",
        "decisionOn": "",
        "description": "Description",
        "files": Array [],
        "id": UUID {
          "bytes": Array [
            147,
            99,
            195,
            214,
            209,
            7,
            66,
            26,
            164,
            75,
            133,
            199,
            250,
            176,
            184,
            67,
          ],
        },
        "links": Array [],
        "locType": "Identity",
        "metadata": Array [],
        "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
        "requesterLocId": undefined,
        "status": "OPEN",
      }
    }
    locState={
      Object {
        "isLogionData": [Function],
        "isLogionIdentity": [Function],
      }
    }
    protectionRequest={null}
  />
  <LocDetailsTab
    checkResult={
      Object {
        "result": "NONE",
      }
    }
    deleteLink={[MockFunction]}
    deleteMetadata={[MockFunction]}
    loc={
      Object {
        "closed": false,
        "createdOn": "",
        "decisionOn": "",
        "description": "Description",
        "files": Array [],
        "id": UUID {
          "bytes": Array [
            147,
            99,
            195,
            214,
            209,
            7,
            66,
            26,
            164,
            75,
            133,
            199,
            250,
            176,
            184,
            67,
          ],
        },
        "links": Array [],
        "locType": "Identity",
        "metadata": Array [],
        "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
        "requesterLocId": undefined,
        "status": "OPEN",
      }
    }
    locItems={Array []}
    locState={
      Object {
        "isLogionData": [Function],
        "isLogionIdentity": [Function],
      }
    }
    viewer="LegalOfficer"
  />
  <VoidDisclaimer
    loc={
      Object {
        "closed": false,
        "createdOn": "",
        "decisionOn": "",
        "description": "Description",
        "files": Array [],
        "id": UUID {
          "bytes": Array [
            147,
            99,
            195,
            214,
            209,
            7,
            66,
            26,
            164,
            75,
            133,
            199,
            250,
            176,
            184,
            67,
          ],
        },
        "links": Array [],
        "locType": "Identity",
        "metadata": Array [],
        "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
        "requesterLocId": undefined,
        "status": "OPEN",
      }
    }
  />
  <CertificateAndLimits
    loc={
      Object {
        "closed": false,
        "createdOn": "",
        "decisionOn": "",
        "description": "Description",
        "files": Array [],
        "id": UUID {
          "bytes": Array [
            147,
            99,
            195,
            214,
            209,
            7,
            66,
            26,
            164,
            75,
            133,
            199,
            250,
            176,
            184,
            67,
          ],
        },
        "links": Array [],
        "locType": "Identity",
        "metadata": Array [],
        "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
        "requesterLocId": undefined,
        "status": "OPEN",
      }
    }
    viewer="LegalOfficer"
  />
  <SupersedesDisclaimer
    loc={
      Object {
        "closed": false,
        "createdOn": "",
        "decisionOn": "",
        "description": "Description",
        "files": Array [],
        "id": UUID {
          "bytes": Array [
            147,
            99,
            195,
            214,
            209,
            7,
            66,
            26,
            164,
            75,
            133,
            199,
            250,
            176,
            184,
            67,
          ],
        },
        "links": Array [],
        "locType": "Identity",
        "metadata": Array [],
        "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
        "requesterLocId": undefined,
        "status": "OPEN",
      }
    }
  />
  <CheckFileFrame
    checkResult="NONE"
    checkedItem="confidential document"
    context="Identity LOC"
  />
  <VoidFrame
    loc={
      Object {
        "closed": false,
        "createdOn": "",
        "decisionOn": "",
        "description": "Description",
        "files": Array [],
        "id": UUID {
          "bytes": Array [
            147,
            99,
            195,
            214,
            209,
            7,
            66,
            26,
            164,
            75,
            133,
            199,
            250,
            176,
            184,
            67,
          ],
        },
        "links": Array [],
        "locType": "Identity",
        "metadata": Array [],
        "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
        "requesterLocId": undefined,
        "status": "OPEN",
      }
    }
  />
</LocPane>
`;

exports[`ContextualizedLocDetails renders empty 1`] = `
<LocPane
  loc={
    Object {
      "id": UUID {
        "bytes": Uint8Array [
          174,
          212,
          198,
          228,
          151,
          158,
          72,
          173,
          190,
          110,
          75,
          211,
          159,
          185,
          71,
          98,
        ],
      },
      "locType": "Identity",
      "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
      "userIdentity": Object {
        "email": "john.doe@logion.network",
        "firstName": "John",
        "lastName": "Doe",
        "phoneNumber": "+1234",
      },
    }
  }
>
  <LegalOfficerInstructions
    loc={
      Object {
        "id": UUID {
          "bytes": Uint8Array [
            174,
            212,
            198,
            228,
            151,
            158,
            72,
            173,
            190,
            110,
            75,
            211,
            159,
            185,
            71,
            98,
          ],
        },
        "locType": "Identity",
        "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
        "userIdentity": Object {
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
      }
    }
    locState={
      Object {
        "isLogionData": [Function],
        "isLogionIdentity": [Function],
      }
    }
    protectionRequest={null}
  />
  <LocDetailsTab
    checkResult={
      Object {
        "result": "NONE",
      }
    }
    deleteLink={[MockFunction]}
    deleteMetadata={[MockFunction]}
    loc={
      Object {
        "id": UUID {
          "bytes": Uint8Array [
            174,
            212,
            198,
            228,
            151,
            158,
            72,
            173,
            190,
            110,
            75,
            211,
            159,
            185,
            71,
            98,
          ],
        },
        "locType": "Identity",
        "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
        "userIdentity": Object {
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
      }
    }
    locItems={Array []}
    locState={
      Object {
        "isLogionData": [Function],
        "isLogionIdentity": [Function],
      }
    }
    viewer="LegalOfficer"
  />
  <VoidDisclaimer
    loc={
      Object {
        "id": UUID {
          "bytes": Uint8Array [
            174,
            212,
            198,
            228,
            151,
            158,
            72,
            173,
            190,
            110,
            75,
            211,
            159,
            185,
            71,
            98,
          ],
        },
        "locType": "Identity",
        "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
        "userIdentity": Object {
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
      }
    }
  />
  <CertificateAndLimits
    loc={
      Object {
        "id": UUID {
          "bytes": Uint8Array [
            174,
            212,
            198,
            228,
            151,
            158,
            72,
            173,
            190,
            110,
            75,
            211,
            159,
            185,
            71,
            98,
          ],
        },
        "locType": "Identity",
        "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
        "userIdentity": Object {
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
      }
    }
    viewer="LegalOfficer"
  />
  <SupersedesDisclaimer
    loc={
      Object {
        "id": UUID {
          "bytes": Uint8Array [
            174,
            212,
            198,
            228,
            151,
            158,
            72,
            173,
            190,
            110,
            75,
            211,
            159,
            185,
            71,
            98,
          ],
        },
        "locType": "Identity",
        "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
        "userIdentity": Object {
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
      }
    }
  />
  <CheckFileFrame
    checkResult="NONE"
    checkedItem="confidential document"
    context="Identity LOC"
  />
  <VoidFrame
    loc={
      Object {
        "id": UUID {
          "bytes": Uint8Array [
            174,
            212,
            198,
            228,
            151,
            158,
            72,
            173,
            190,
            110,
            75,
            211,
            159,
            185,
            71,
            98,
          ],
        },
        "locType": "Identity",
        "requesterAddress": "5Ew3MyB15VprZrjQVkpQFj8okmc9xLDSEdNhqMMS5cXsqxoW",
        "userIdentity": Object {
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
      }
    }
  />
</LocPane>
`;
